Remove callings to be deprecated APIS