@@ -1,8 +1,9 @@
 package gate.sql.fetcher;
 
-import gate.sql.Cursor;
 import gate.error.AppError;
 import gate.lang.property.Property;
+import gate.sql.Cursor;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -32,15 +33,15 @@ public class PropertyEntityListFetcher<T> implements Fetcher<List<T>>
 			List<T> results = new ArrayList<>();
 			while (rs.next())
 			{
-				T result = type.newInstance();
+				T result = type.getDeclaredConstructor().newInstance();
 				properties.forEach(e -> e.setValue(result, rs.getValue(e.getRawType(), e.toString())));
 				results.add(result);
 			}
 			return results;
-		} catch (IllegalAccessException | InstantiationException e)
+		} catch (IllegalAccessException | InstantiationException | NoSuchMethodException
+				| SecurityException | IllegalArgumentException | InvocationTargetException e)
 		{
 			throw new AppError(e);
 		}
-
 	}
 }
